--- a/AGDPMS.Shared/Components/Projects/ProjectTechList.razor
+++ b/AGDPMS.Shared/Components/Projects/ProjectTechList.razor
@@ -37,6 +37,7 @@
     </DataTemplate>
     <ActionTemplate>
         <a href="/projects/@context.Id" class="btn btn-outline-dark btn-sm">Chi tiết</a>
+        <a href="@context.DesignFilePath" class="btn btn-outline-primary btn-sm" target="_blank" download>File thiết kế</a>
     </ActionTemplate>
 </DataTable>
 
