--- a/AGDPMS.Web/Components/Pages/Home.razor
+++ b/AGDPMS.Web/Components/Pages/Home.razor
@@ -349,7 +349,7 @@
         }
         else if (string.Equals(role, "InventoryManager", StringComparison.OrdinalIgnoreCase))
         {
-            try { Nav.NavigateTo("/inventory/stocks", true); }
+            try { Nav.NavigateTo("/inventory/plannings", true); }
             catch { }
         }
         else
