--- a/AGDPMS.Shared/Components/Layout/MainLayout.razor
+++ b/AGDPMS.Shared/Components/Layout/MainLayout.razor
@@ -104,16 +104,28 @@
         </AuthorizeView>
         <AuthorizeView Roles="InventoryManager">
             <li class="nav-item">
-                <a class="nav-link text-white" data-bs-toggle="collapse" href="#inventory-menu" role="button">
-                    <i class="bi bi-list-task me-2"></i><span>Kho</span> <i class="bi bi-chevron-down small brand-text"></i>
-                </a>
-                <div class="collapse" id="inventory-menu">
-                    <ul class="nav flex-column ps-4 small">
-                        <li class="nav-item"><NavLink href="/inventory/stocks" class="nav-link text-white"><span>Tồn kho</span></NavLink></li>
-                        <li class="nav-item"><NavLink href="/inventory/issues" class="nav-link text-white"><span>Xuất kho</span></NavLink></li>
-                        <li class="nav-item"><NavLink href="/inventory/receipts" class="nav-link text-white"><span>Nhập kho</span></NavLink></li>
-                    </ul>
-                </div>
+                <NavLink href="/inventory/plannings" class="nav-link text-white">
+                    <i class="bi bi-database-exclamation me-2"></i>
+                    <span>Yêu cầu</span>
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink href="/inventory/stocks" class="nav-link text-white">
+                    <i class="bi bi-database me-2"></i>
+                    <span>Tồn kho</span>
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink href="/inventory/issues" class="nav-link text-white">
+                    <i class="bi bi-database-dash me-2"></i>
+                    <span>Xuất kho</span>
+                </NavLink>
+            </li>
+            <li class="nav-item">
+                <NavLink href="/inventory/receipts" class="nav-link text-white">
+                    <i class="bi bi-database-add me-2"></i>
+                    <span>Nhập kho</span>
+                </NavLink>
             </li>
         </AuthorizeView>
     </ul>
